ui update, fragment change animation, added pref fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,5 @@
             android:exported="false" >
         </service>
     </application>
-
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
