--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "org.home.d2e.numbersprinter"
+        applicationId "io.github.d2edev.numbersprinter"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
