--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.home.d2e.numbersprinter" >
+    package="io.github.d2edev.numbersprinter" >
 
     <application
-        android:name=".Core.MyApp"
+        android:name="io.github.d2edev.numbersprinter.Core.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.Light" >
         <activity
-            android:name=".MainActivity"
+            android:name="io.github.d2edev.numbersprinter.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".Core.TickerService"
+            android:name="io.github.d2edev.numbersprinter.Core.TickerService"
             android:enabled="true"
             android:exported="false" >
         </service>
